@@ -1,7 +1,7 @@
 /*
 QuiXProc: efficient evaluation of XProc Pipelines.
-Copyright (C) 2011 Innovimax
-2008-2011 Mark Logic Corporation.
+Copyright (C) 2011-2012 Innovimax
+2008-2012 Mark Logic Corporation.
 Portions Copyright 2007 Sun Microsystems, Inc.
 All rights reserved.
 
@@ -21,33 +21,42 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
 package com.xmlcalabash.util;
 
-import org.xml.sax.InputSource;
-import org.xml.sax.EntityResolver;
-import org.xml.sax.SAXException;
-import org.xml.sax.XMLReader;
-
-import javax.xml.transform.URIResolver;
-import javax.xml.transform.Source;
-import javax.xml.transform.TransformerException;
-import javax.xml.transform.sax.SAXSource;
-import javax.xml.parsers.SAXParserFactory;
-import javax.xml.parsers.ParserConfigurationException;
-
-import net.sf.saxon.s9api.DocumentBuilder;
-import net.sf.saxon.s9api.Processor;
-import net.sf.saxon.s9api.SaxonApiException;
-import net.sf.saxon.s9api.XdmNode;
-import net.sf.saxon.Configuration;
-import com.xmlcalabash.core.XProcException;
-import com.xmlcalabash.core.XProcConstants;
-import com.xmlcalabash.core.XProcRuntime;
-
+import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Hashtable;
 import java.util.logging.Logger;
-import java.io.IOException;
 
+import javax.xml.parsers.ParserConfigurationException;
+import javax.xml.parsers.SAXParserFactory;
+import javax.xml.transform.Source;
+import javax.xml.transform.TransformerException;
+import javax.xml.transform.URIResolver;
+import javax.xml.transform.sax.SAXSource;
+
+import net.sf.saxon.s9api.DocumentBuilder;
+import net.sf.saxon.s9api.SaxonApiException;
+import net.sf.saxon.s9api.XdmNode;
+
+import org.xml.sax.EntityResolver;
+import org.xml.sax.InputSource;
+import org.xml.sax.SAXException;
+import org.xml.sax.XMLReader;
+import org.xml.sax.helpers.XMLReaderFactory;
+
+import com.xmlcalabash.core.XProcConstants;
+import com.xmlcalabash.core.XProcException;
+import com.xmlcalabash.core.XProcRuntime;
+
+/**
+ * Created by IntelliJ IDEA.
+ * User: ndw
+ * Date: Oct 29, 2008
+ * Time: 4:04:27 PM
+ * To change this template use File | Settings | File Templates.
+ */
 public class XProcURIResolver implements URIResolver, EntityResolver {
     private URIResolver uriResolver = null;
     private EntityResolver entityResolver = null;
@@ -82,26 +91,47 @@ public class XProcURIResolver implements URIResolver, EntityResolver {
 
     public Source resolve(String href, String base) throws TransformerException {
         runtime.finest(null,null,"URIResolver(" + href + "," + base + ")");
-        
-        try {
-            URI baseURI = new URI(base);
-            String uri = baseURI.resolve(href).toASCIIString();            
-            if (cache.containsKey(uri)) {
-                runtime.finest(null ,null,"Returning cached document.");
-                return cache.get(uri).asSource();
+
+        String uri = null;
+        if (base == null) {
+            try {
+                URL url = new URL(href);
+                uri = url.toURI().toASCIIString();
+            } catch (MalformedURLException mue) {
+                runtime.finest(null,null,"MalformedURLException on " + href);
+            } catch (URISyntaxException use) {
+                runtime.finest(null,null,"URISyntaxException on " + href);
+            }
+        } else {
+            try {
+                URI baseURI = new URI(base);
+                uri = baseURI.resolve(href).toASCIIString();
+            } catch (URISyntaxException use) {
+                runtime.finest(null,null,"URISyntaxException resolving base and href: " + base + " : " + href);
+            }
+        }
+
+        if (cache.containsKey(uri)) {
+            runtime.finest(null ,null,"Returning cached document.");
+            return cache.get(uri).asSource();
+        }
+
+        if (uriResolver != null) {
+            URL absoluteURI = null;
+
+            // This is an attempt to deal with jar: URIs, pipelines run from inside jar files.
+            try {
+                if (base == null) {
+                    absoluteURI = new URL(href);
+                } else {
+                    absoluteURI = new URL(new URL(base), href);
+                }
+            } catch (MalformedURLException mue) {
+                throw new XProcException(mue);
             }
 
-            /* This is clearly not right because with it you can't even load pipelines from the local disk...
-            if (runtime.getSafeMode() && uri.startsWith("file:")) {
-                throw XProcException.dynamicError(21);
-            }
-            */
-        } catch (URISyntaxException use) {
-            runtime.finest(null,null,"URISyntaxException resolving base and href?");
-        }
-        
-        if (uriResolver != null) {
-            Source resolved = uriResolver.resolve(href, base);            
+            Source resolved = uriResolver.resolve(absoluteURI.toString(), base);
+
             // FIXME: This is a grotesque hack. This is wrong. Wrong. Wrong.
             // To support caching, XMLResolver (xmlresolver.org) returns a Source even when it hasn't
             // found the resource. Problem is, it doesn't setup the entity resolver correctly for that
@@ -133,9 +163,7 @@ public class XProcURIResolver implements URIResolver, EntityResolver {
 
     public XdmNode parse(String href, String base, boolean dtdValidate) {
         Source source = null;
-
         href = URIUtils.encode(href);
-
         runtime.finest(null,null,"Attempting to parse: " + href + " (" + base + ")");
 
         try {
@@ -143,11 +171,21 @@ public class XProcURIResolver implements URIResolver, EntityResolver {
         } catch (TransformerException te) {
             throw new XProcException(XProcConstants.dynamicError(9), te);
         }
-        
+
         if (source == null) {
             try {
-                URI baseURI = new URI(base);                
-                source = new SAXSource(new InputSource(baseURI.resolve(href).toASCIIString()));                
+                URI baseURI = new URI(base);
+                source = new SAXSource(new InputSource(baseURI.resolve(href).toASCIIString()));
+                XMLReader reader = ((SAXSource) source).getXMLReader();
+                if (reader == null) {
+                    try {
+                        reader = XMLReaderFactory.createXMLReader();
+                        ((SAXSource) source).setXMLReader(reader);
+                        reader.setEntityResolver(this);
+                    } catch (SAXException se) {
+                        // nop?
+                    }
+                }
             } catch (URISyntaxException use) {
                 throw new XProcException(use);
             }
@@ -156,10 +194,6 @@ public class XProcURIResolver implements URIResolver, EntityResolver {
         DocumentBuilder builder = runtime.getProcessor().newDocumentBuilder();
         builder.setDTDValidation(dtdValidate);
         builder.setLineNumbering(true);
-        //builder.setWhitespaceStrippingPolicy(WhitespaceStrippingPolicy.NONE);
-
-        Processor proc = runtime.getProcessor();
-        Configuration config = proc.getUnderlyingConfiguration();
 
         try {
             return builder.build(source);
@@ -172,6 +206,30 @@ public class XProcURIResolver implements URIResolver, EntityResolver {
             } else {
                 throw XProcException.dynamicError(11, sae);
             }
+        }
+    }
+
+    public XdmNode parse(InputSource isource) {
+        try {
+            // Make sure the builder uses our entity resolver
+            XMLReader reader = XMLReaderFactory.createXMLReader();
+            reader.setEntityResolver(this);
+            SAXSource source = new SAXSource(reader, isource);
+            DocumentBuilder builder = runtime.getProcessor().newDocumentBuilder();
+            builder.setLineNumbering(true);
+            builder.setDTDValidation(false);
+            return builder.build(source);
+        } catch (SaxonApiException sae) {
+            String msg = sae.getMessage();
+            if (msg.contains("validation")) {
+                throw XProcException.stepError(27, sae);
+            } else if (msg.contains("HTTP response code: 403 ")) {
+                throw XProcException.dynamicError(21);
+            } else {
+                throw XProcException.dynamicError(11, sae);
+            }
+        } catch (SAXException e) {
+            throw new XProcException(e);
         }
     }
 
